--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@as-integrations/next": "^4.0.0",
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.76.1",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "graphql": "^16.11.0",
@@ -20,6 +21,7 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "recharts": "^3.2.1",
