--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql-tag": "^2.12.6",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "pdfkit": "^0.17.2",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
@@ -32,6 +33,7 @@
     "@graphql-codegen/cli": "^6.0.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdfkit": "^0.17.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
